# nlp-reconstruction-project

./: .gitignore  README.md  pyproject.toml  readme.md
paraphrasing/: paradoteo_1A.ipynb  paradoteo_2A.ipynb
paraphrasing.ipynb/: paradoteo_1B.ipynb  paradoteo_1C.ipynb  paradoteo_2B.ipynb
