[project]
name = "nlp-reconstruction-project"
version = "0.1.0"
description = "NLP reconstruction assignment"
authors = [
    {name = "Kyriakos Giannopoulos",email = "kgiannop29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "transformers (>=4.52.4,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
